JDK 11 に対応した。JavaFX の別途インストールは不要。

--- a/crowdwalk/src/main/resources/stylesheet.css
+++ b/crowdwalk/src/main/resources/stylesheet.css
@@ -1,3 +1,8 @@
+.root{
+    -fx-font-size: 10pt;
+    -fx-font-family: "Verdana";
+}
+
 .custom-color-pane .toggle-button {
     -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
     -fx-background-insets: 0 0 -1 0, 0, 1, 2;
